added a few minor test steps, changed nav bar link, added course create title

--- a/course/templates/course/create.html
+++ b/course/templates/course/create.html
@@ -8,6 +8,10 @@
         href="{% static 'teacher_view/css/navbar.css' %}">
 {% endblock %}
 
+{% block title %}
+<title>Create Course</title>
+{% endblock %}
+
 {% block content %}
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
