--- a/teacher_view/templates/teacher_view/navbar.html
+++ b/teacher_view/templates/teacher_view/navbar.html
@@ -17,7 +17,7 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
-        <a href="{% url 'courses_page' %}" id="curr-courses">Courses</a>
+        <a href="{% url 'courses_page' %}" id="all-courses">Courses</a>
         <a href="{% url 'add_course_page' %}" id="add-course">Add Course</a>
         {% for course in current_courses %}
         <a href="{{ course.get_absolute_url }}" id="course-{{ course.pk }}-link">{{ course.title }}</a>
